--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="js/main.js"></script>
     <h1>Produkt</h1>
-<button onclick="Dodaj()">Wyświetl opis</button>
+<button>Wyświetl opis</button>
 <p id="opis"></p>
+<script src="js/main.js"></script>
 </body>
 </html>
